test-project-compiler/src/snapshots/test_project_compiler__generated_tests__erlang_source_maps_dev.snap
---
source: test-project-compiler/src/generated_tests.rs
expression: "./cases/erlang_source_maps"
---
//// erlang_source_maps/build/dev/erlang/example/_gleam_artefacts/example@@main.erl
<erlang entrypoint>

//// erlang_source_maps/build/dev/erlang/example/ebin/example.app
{application, example, [
    {vsn, "1.0.0"},
    {applications, []},
    {description, ""},
    {modules, []},
    {registered, []}
]}.


//// erlang_source_maps/build/dev/erlang/example/ebin/example@@main.beam
<0 byte binary>

//// erlang_source_maps/build/dev/erlang/fingerprint
<gleam compiler version string> 0
