test-project-compiler/src/snapshots/test_project_compiler__generated_tests__erlang_typescript_declarations_lsp.snap
---
source: test-project-compiler/src/generated_tests.rs
expression: "./cases/erlang_typescript_declarations"
---
//// erlang_typescript_declarations/build/lsp/erlang/example/_gleam_artefacts/example@@main.erl
<erlang entrypoint>

//// erlang_typescript_declarations/build/lsp/erlang/example/ebin/example.app
{application, example, [
    {vsn, "1.0.0"},
    {applications, []},
    {description, ""},
    {modules, []},
    {registered, []}
]}.


//// erlang_typescript_declarations/build/lsp/erlang/example/ebin/example@@main.beam
<0 byte binary>

//// erlang_typescript_declarations/build/lsp/erlang/fingerprint
<gleam compiler version string> 0
