test-project-compiler/src/snapshots/test_project_compiler__generated_tests__javascript_source_maps_lsp.snap
---
source: test-project-compiler/src/generated_tests.rs
expression: "./cases/javascript_source_maps"
---
//// javascript_source_maps/build/lsp/javascript/example/gleam.mjs
export * from "../prelude.mjs";


//// javascript_source_maps/build/lsp/javascript/fingerprint
<gleam compiler version string> 2

//// javascript_source_maps/build/lsp/javascript/prelude.mjs
<javascript prelude>
