test-project-compiler/src/snapshots/test_project_compiler__generated_tests__javascript_typescript_declarations_dev.snap
---
source: test-project-compiler/src/generated_tests.rs
expression: "./cases/javascript_typescript_declarations"
---
//// javascript_typescript_declarations/build/dev/javascript/example/gleam.d.mts
export * from "../prelude.mjs";
export type * from "../prelude.d.mts";


//// javascript_typescript_declarations/build/dev/javascript/example/gleam.mjs
export * from "../prelude.mjs";


//// javascript_typescript_declarations/build/dev/javascript/fingerprint
<gleam compiler version string> 1

//// javascript_typescript_declarations/build/dev/javascript/prelude.d.mts
<typescript prelude>

//// javascript_typescript_declarations/build/dev/javascript/prelude.mjs
<javascript prelude>
